# RauraWebui

./: .gitignore  README.md
backend/: .env.example  dashboard.html  dashboard_events.py  database.py  main.py  pyproject.toml  start.sh
frontend/: .env.development  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/styles/: original.css
frontend/src/components/common/: HeroSection.vue  ImageModal.vue  LightningIcon.vue  LoadingPage.vue  Toast.vue
frontend/src/components/floating/: PresetPreviewBox.vue  PresetSuggestions.vue  TagDetailTooltip.vue  TagSuggestions.vue
frontend/src/components/output/: GenerateButton.vue  HistoryPanel.vue  InlineNavContainer.vue  LivePreview.vue  ResultArea.vue
frontend/src/components/search/: ArtistSearchPopup.vue  RelatedTagsPopup.vue  TagSearchPopup.vue
frontend/src/components/settings/: AdvancedSettings.vue  LoraConfig.vue  (+3 more)
frontend/src/composables/: useAdvancedSettings.ts  useArtistSearch.ts  useClientIdentity.ts  useDragAndDrop.ts  useGeneration.ts  useHistory.ts  useImageCache.ts  useLoraConfig.ts  useModelSelect.ts  usePresets.ts  useQuickCursor.ts  useRatioSlider.ts  useSharedDB.ts  useTagSearchPopup.ts  useTagSuggestions.ts  useTextHistory.ts  useTheme.ts  useTooltip.ts  useTranslation.ts  useWebSocket.ts
frontend/src/services/: api.ts  websocket.ts
frontend/src/stores/: generation.ts  models.ts  tags.ts  user.ts
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts  crypto.ts  helpers.ts  prompt.ts  resolution.ts  scoring.ts
