[project]
name = "backend"
version = "0.1.0"
description = "AI image generation backend with ComfyUI integration (cloud deployment)"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "fastapi>=0.136.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "uvicorn[standard]>=0.48.0",
    "websockets>=15.0.1",
]
